--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 
 		<!-- database dependencies -->
 		<dependency>
-			<groupId>com.oracle</groupId>
+			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<version>${ojdbc.version}</version>
 		</dependency>
