--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,11 +1,8 @@
 spring:
   application:
-    name: ${SPRING_CONFIG_ENVIRONMENT}
-  profiles:
-    active: ${SPRING_CONFIG_PROFILE}
+    name: ${SPRING_CONFIG_PROFILE}
   cloud:
     config:
-      enabled: ${SPRING_CONFIG_ENABLED:false}
       allowOverride: false
       failFast: true
       overrideNone: false
