--- a/pom.xml
+++ b/pom.xml
@@ -130,12 +130,10 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- database dependencies -->
 		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>${ojdbc.version}</version>
-		</dependency>
+        		<groupId>mysql</groupId>
+        		<artifactId>mysql-connector-java</artifactId>
+    		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
