--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -10,13 +10,13 @@ spring:
       value.subject.name.strategy: io.confluent.kafka.serializers.subject.RecordNameStrategy
   jpa:
     show-sql: true
-    database-platform: org.hibernate.dialect.Oracle12cDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: none
       use-new-id-generator-mappings: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.Oracle12cDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         # allow JPA to send nulls in procedures, this is not activated by default
         proc:
           param_null_passing: true
@@ -26,7 +26,7 @@ spring:
     tomcat:
       test-on-borrow: true
     continue-on-error: true
-    driver-class-name: oracle.jdbc.OracleDriver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://database-1.cshtwictl9dg.us-east-1.rds.amazonaws.com:3306/database-1
     username: admin
     password: adminadmin
