--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -27,10 +27,10 @@ spring:
       test-on-borrow: true
     continue-on-error: true
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://database-1.cshtwictl9dg.us-east-1.rds.amazonaws.com:3306/database-1
+    url: jdbc:mysql://database-1.cshtwictl9dg.us-east-1.rds.amazonaws.com:3306/gbo
     username: admin
     password: adminadmin
-    database: database-1
+    database: gbo
 
 app:
   topic:
